<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vinipachecov.recursosdeumaaplicacao.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/NomeCompleto"
        android:background="@color/corfundoTexto"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/nomeeditText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/corfundoTexto"
        android:hint="@string/Email"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/emaileditText"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Login"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/logineditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/logineditText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/RepitaSenha"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/repeatPasswordeditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/repeatPasswordeditText" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Senha"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/passwordeditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/passwordeditText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Nacionalidade"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/nacionalidadeSpinner"
        android:layout_marginStart="3dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/nacionalidadeSpinner"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/cadastrarButton"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginBottom="19dp"
        android:layout_marginLeft="111dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="24dp"
        android:hint="@string/CadastrarButton"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nacionalidadeSpinner"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteY="443dp"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nomeeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NomeCompleto"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/emaileditText"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/emaileditText" />

    <EditText
        android:id="@+id/emaileditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/nomeeditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView3" />

    <EditText
        android:id="@+id/logineditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Login"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/emaileditText"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/emaileditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/emaileditText" />

    <EditText
        android:id="@+id/passwordeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Senha"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/logineditText"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/logineditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/logineditText" />

    <EditText
        android:id="@+id/repeatPasswordeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/RepitaSenha"
        android:background="@color/corfundoTexto"
        android:textColorHint="@color/corTexto"
        android:textColor="@color/CorUnderline"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/passwordeditText"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordeditText"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/passwordeditText" />

    <Spinner
        android:id="@+id/nacionalidadeSpinner"
        android:background="@color/corfundoTexto"
        android:hint = "@string/Nacionalidade"

        android:textColor="@color/CorUnderline"
        android:textColorHint="@color/corTexto"
        android:layout_width="0dp"
        android:layout_height="24dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="94dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />
</android.support.constraint.ConstraintLayout>
